syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/aeekayy/stilla/api/protobuf/messages";


message AuditLog {
    string topic = 1;
    string funcName = 2;
    string service = 3;
    
    enum MessageType {
        AUDIT = 0;
    }

    MessageType messageType = 4;

    google.protobuf.Struct message = 5;
    // repeated google.protobuf.Any message = 5;
    google.protobuf.Timestamp sent = 6;
}